# espidf_frost_v1

./: CMakeLists.txt  partitions.csv
main/: CMakeLists.txt  FROST_Firmware_README.txt  IR_Logic_README.txt  README_CALIBRATION_PHASE1.txt  acknowledgement_input.cpp  acknowledgement_input.hpp  audio_manager.cpp  audio_manager.hpp  bluetooth.cpp  bluetooth.hpp  bottle_calibration.cpp  bottle_calibration.hpp  config_parser.cpp  config_parser.hpp  configuration_storage.cpp  configuration_storage.hpp  consumption_tracker.cpp  consumption_tracker.hpp  dfplayer.cpp  dfplayer.hpp  display.cpp  display.hpp  hx711.cpp  hx711.hpp  main.cpp  pomodoro.cpp  pomodoro.hpp  reminder_engine.cpp  reminder_engine.hpp  reminder_types.hpp  rtc_ds3231.cpp  rtc_ds3231.hpp  scale.cpp  scale.hpp
main/images/: CMakeLists.txt  clock_bg.h  custom_background.h  drinkwater1.h  font.h  font_regular.h  frost_logo.h  hydration_consumption.h  image_time_to_stretch_inverted.h  medication_background.h  meditation.h  pomodoro_break_bg.h  pomodoro_focus_bg.h  rule.h  short_walk.h
